[BG-395] Design: Admin: Form tree wrap numbers fix

--- a/project-base/src/SS6/ShopBundle/Resources/styles/admin/components/form/tree.less
+++ b/project-base/src/SS6/ShopBundle/Resources/styles/admin/components/form/tree.less
@@ -139,6 +139,7 @@ Form tree
 			&--link {
 				color: @color-link;
 				text-decoration: underline;
+				display: inline;
 
 				.form-tree__item__click:hover & {
 					color: @color-link-hover;
